[package]
name = "uping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.27", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
clap = { version = "4.2.1", features = ["derive"] }
dns-lookup = "1.0.8"
parse_duration = "2.1.1"
